force-app/main/default/objects/OperatorStop__c/OperatorStop__c.object-meta.xml
<CustomObject>
    <label>OperatorStop</label>
    <nameField>
        <label>OperatorStop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OperatorStops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>