force-app/main/default/objects/OperatorStop__c/fields/DestinationStop__c.field-meta.xml
<CustomField>
    <fullName>DestinationStop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DestinationStop</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>OperatorStops (DestinationStop)</relationshipLabel>
    <relationshipName>DestinationStop</relationshipName>
    <type>Lookup</type>
</CustomField>