force-app/main/default/objects/OperatorStop__c/fields/DestinationTime__c.field-meta.xml
<CustomField>
    <fullName>DestinationTime__c</fullName>
    <label>DestinationTime</label>
    <type>DateTime</type>
</CustomField>