force-app/main/default/objects/OperatorStop__c/fields/OperatorRoute__c.field-meta.xml
<CustomField>
    <fullName>OperatorRoute__c</fullName>
    <label>OperatorRoute</label>
    <referenceTo>OperatorRoute__c</referenceTo>
    <relationshipLabel>OperatorStops</relationshipLabel>
    <relationshipName>OperatorRoute</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>