force-app/main/default/objects/OperatorStop__c/fields/SourceStop__c.field-meta.xml
<CustomField>
    <fullName>SourceStop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SourceStop</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>OperatorStops</relationshipLabel>
    <relationshipName>SourceStops</relationshipName>
    <type>Lookup</type>
</CustomField>