force-app/main/default/objects/OperatorStop__c/fields/SourceTime__c.field-meta.xml
<CustomField>
    <fullName>SourceTime__c</fullName>
    <label>SourceTime</label>
    <type>DateTime</type>
</CustomField>