force-app/main/default/objects/OperatorStop__c/fields/StopDirection__c.field-meta.xml
<CustomField>
    <fullName>StopDirection__c</fullName>
    <label>StopDirection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Destination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>